# doctor_app

./: db.sqlite3  pyproject.toml  requirements.txt
doctor_app/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
