[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["haneen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
knox = "^0.1.14"
cryptography = "^44.0.0"
jinja2 = "^3.1.4"
boto3 = "^1.35.83"
django-rest-knox = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
